PEL -- Pragmatic Emacs Library --  NEWS         -*- org -*-

* Changes since Version 0.4.1:
** Modifications, Fixes and Improvements:
- Add *pel-toggle-switch-to-buffer-obey-display-actions*, bound to ~<f11> w <f4> b~ to toggle behaviour of switch buffer commands:
  either respecting or not respecting display actions.  Available for Emacs 29.1 or later only.
  Use it to learn the impact of the new *switch-to-buffer-obey-display-actions* user-option.
- Simplified bindings for *pel-toggle-window-dedicated*, changed from ~<f11> w d d~ to ~<f11> w d~.
- Removed ~<f11> w d ?~ binding to *pel-show-dedicated-status*.  Added ~<f11> w ?~ status to *pel-show-window-info* instead.
  The new function displays the window number, buffer, size and whether the window is dedicated.
- Add ~<f11> | h~ binding for the *horizontal-scroll-bar-mode* command when Emacs is running in graphics mode.
- Improvements to window management:
  - Add *pel-toggle-split-window-keep-point*, mapped to ~<f11> w <f4> s~ to toggle current value of the *split-value-keep-point* allowing
    the various split commands to behave differently in the way they place the cursor inside the split windows.
  - Add *pel-buffer-in-side-window*, mapped to ~<f11> w M-w~ and into four easy-to-use window Hydra keys: ~<f7>~ followed by one of: ~M-2~, ~M-4~, ~M-6~ or ~M-8~.
  - Add PEL Window Hydra keys to create root windows at the bottom and right side of the current Emacs frame (~<f7> M-r~ and ~<f7> M-R~)
    This command is available in Emacs 29.1 or later; the Hydra keys are always available but will default to
    splitting to normal windows in older versions of Emacs.
    Create IDE-like side windows on one of the 4 sides of the current Emacs frame with that command.
  - The *pel-create-window-DIRECTION* commands now accept an optional SIZE argument allowing these commands to be used to split windows
    into 2 windows of different sizes.